--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,7 @@
+# linguist-ignore
+*.keras linguist-detectable=false
+*.pt linguist-detectable=false
+
 # models
 *.keras filter=lfs diff=lfs merge=lfs -text
 *.pt filter=lfs diff=lfs merge=lfs -text
